stylized btn Red or Green when is correct or not

--- a/starter/assets/css/styles.css
+++ b/starter/assets/css/styles.css
@@ -86,3 +86,10 @@ li:nth-child(odd) {
   top: 10px;
   right: 10px;
 }
+
+.correct{
+  background-color: green;
+}
+.incorrect{
+  background-color: red;
+}
